Fix font size on mobile

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h1 {
 
 .message-box {
   color: #ddd;
+  font-size: 0.5rem;
 }
 
 #submit-button {
